v1.4.0: (unreleased)
	New Features:
		- Super-{1-10} activates row 1-10. 

v1.3.1: Dan vs. Greg: The never ending story, reloaded.
	New Features
		- [DRun] Search categories. (#449)
	Improvements
		- Fix exit when failed to grab keyboard. (#524)
		- Introduce lazy keyboard grab mode for people who want rofi to show on key-down in i3.
		- Add copyrights to theme (needed for debian packaging).
		- DMENU: Correctly detect end-of-file (#518)
		- Directly queue redraw on overlay change.
		- Remove pango markup from workspace names in I3. (#507)

v1.3.0: Dan vs. Greg: The never ending story.
	New Features
		- Use randr for getting monitor layout. Fallback to xinerama if not available.
		- Re-add fuzzy matcher.
		- Restructure internal code to use dynamic sizing widgets. (hbox, vbox and lists)
		- Async mode for dmenu.
		- Add theme selector script.
		- Include 21 themes.
		- Dynamically sizing window with content.
		- When placed at bottom of screen re-order screen to have entry at bottom.
	Improvements
		- Fix pasting secondary clipboard. (#516)
		- By default use all cores to filter entries.
		- Make sure drawing priority is higher then reading input data.
		- Improve resizing of window, don't make X whipe background.
		- Improve close window (shift-delete) action, by sending NET_WM_CLOSE instead of destroying window.
		- Create cache and run directory on startup. (#497)
		- Fix uneeded redraws on cursor blinking. (#491)
		- Improve time till grabbing keyboard. (#494)
		- Better error message when failing to parse keybindings, also continue parsing on error.
		- Fix problem with custom layouts (#485)
		- Speedup drawing of screen. Works well now for 4k and 8k screens. (factor 1000+ speedup for the flipping of
		buffer) (#496)
		- DRun mode more compatible with specification.
		- Debug output via g_log.
		- Fix password entry cursor position.
		- Use bash instead of sh for get_git_rev.sh (#445)
		- Add Control+G for cancel (#452)
		- Add padding option to textbox (#449)