@@ -74,14 +74,14 @@ int main ( int argc, char ** argv )
      * tokenize
      */
 
-    TASSERT ( levenshtein ( "aap", "aap" ) == 0 );
-    TASSERT ( levenshtein ( "aap", "aap " ) == 1 );
-    TASSERT ( levenshtein ( "aap ", "aap" ) == 1 );
-    TASSERTE ( levenshtein ( "aap", "aap noot" ), 5 );
-    TASSERTE ( levenshtein ( "aap", "noot aap" ), 5 );
-    TASSERTE ( levenshtein ( "aap", "noot aap mies" ), 10 );
-    TASSERTE ( levenshtein ( "noot aap mies", "aap" ), 10 );
-    TASSERTE ( levenshtein ( "otp", "noot aap" ), 5 );
+    TASSERT ( levenshtein ( "aap", g_utf8_strlen ( "aap", -1), "aap", g_utf8_strlen ( "aap", -1) ) == 0 );
+    TASSERT ( levenshtein ( "aap", g_utf8_strlen ( "aap", -1), "aap ", g_utf8_strlen ( "aap ", -1) ) == 1 );
+    TASSERT ( levenshtein ( "aap ", g_utf8_strlen ( "aap ", -1), "aap", g_utf8_strlen ( "aap", -1) ) == 1 );
+    TASSERTE ( levenshtein ( "aap", g_utf8_strlen ( "aap", -1), "aap noot", g_utf8_strlen ( "aap noot", -1) ), 5 );
+    TASSERTE ( levenshtein ( "aap", g_utf8_strlen ( "aap", -1), "noot aap", g_utf8_strlen ( "noot aap", -1) ), 5 );
+    TASSERTE ( levenshtein ( "aap", g_utf8_strlen ( "aap", -1), "noot aap mies", g_utf8_strlen ( "noot aap mies", -1) ), 10 );
+    TASSERTE ( levenshtein ( "noot aap mies", g_utf8_strlen ( "noot aap mies", -1), "aap", g_utf8_strlen ( "aap", -1) ), 10 );
+    TASSERTE ( levenshtein ( "otp", g_utf8_strlen ( "otp", -1), "noot aap", g_utf8_strlen ( "noot aap", -1) ), 5 );
     /**
      * Quick converision check.
      */
